# userassist-forensic

./: .gitignore  Cargo.toml  README.md  clippy.toml  deny.toml  mkdocs.yml  release-plz.toml  renovate.json
.github/workflows/: ci.yml  fuzz.yml  release-plz.yml
core/: CHANGELOG.md  Cargo.toml
core/src/: lib.rs  tests.rs
core/tests/data/: README.md
docs/: index.md  privacy.md  terms.md  validation.md
docs/decisions/: 0001-core-forensic-split.md  0002-reuse-winreg-core.md  0003-panic-free-fuzzed-forbid-unsafe.md  0004-struct-layout-rot13-dual-format.md  0005-knownfolderid-resolution.md  0006-high-precision-audit.md
forensic/: CHANGELOG.md  Cargo.toml
forensic/src/: lib.rs  tests.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_forensic.rs  fuzz_parse.rs
supply-chain/: config.toml
