[package]
name = "userassist-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[workspace]

[dependencies]
libfuzzer-sys = "0.4"
userassist-core = { path = "../core" }
userassist-forensic = { path = "../forensic" }

[[bin]]
name = "fuzz_parse"
path = "fuzz_targets/fuzz_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_forensic"
path = "fuzz_targets/fuzz_forensic.rs"
test = false
doc = false
bench = false
